# april

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/april/components/: Animate.h  Audio.h  Input.h  Message.h  Render.h
include/april/core/: Application.h  Context.h  ID.h  Layer.h  Object.h  ObjectPool.h  Registry.h  Renderer.h  Scene.h  Window.h
include/april/ecs/: Component.h  Entity.h  Enums.h  System.h
include/april/graphics/: RenderImpl.h  RenderStrategy.h  RenderTarget.h  RendererFactory.h
include/april/graphics/api/: gl2.h
include/april/network/: Client.h  Protocol.h  Server.h  Socket.h
include/april/parse/: ColladaParser.h  JSONParser.h  XMLParser.h  YAMLParser.h
include/april/scenegraph/: Camera.h  DirectionalLight.h  FlashLight.h  Material.h  Model.h  PointLight.h  Quad.h  SpotLight.h  Text.h  Texture.h
include/april/scenegraph/description/: Camera.h  DirectionalLight.h  FlashLight.h  Material.h  Model.h  PointLight.h  Quad.h  SpotLight.h  Text.h  Texture.h
include/april/shaders/: Basic.h  BlinnPhong.h  Phong.h  UI.h
include/april/systems/: AnimationSystem.h  AudioSystem.h  InputSystem.h  MessageSystem.h  RenderSystem.h
include/april/util/: ArgParser.h  Exception.h  Logger.h  Profiler.h
include/winnebago/components/: Animate.h  Audio.h  Input.h  Message.h  Render.h
include/winnebago/core/: Application.h  Context.h  Layer.h  Registry.h  Renderer.h  Scene.h  Window.h
include/winnebago/ecs/: Component.h  Entity.h  System.h
include/winnebago/graphics/: RenderImpl.h  RenderStrategy.h  RendererFactory.h
include/winnebago/graphics/api/: gl2.h
include/winnebago/network/: Client.h  Protocol.h  Server.h  Socket.h
include/winnebago/scenegraph/: Camera.h  DirectionalLight.h  FlashLight.h  Material.h  Model.h  PointLight.h  Quad.h  SpotLight.h  Text.h  Texture.h
include/winnebago/scenegraph/description/: Camera.h  DirectionalLight.h  FlashLight.h  Material.h  Model.h  PointLight.h  Quad.h  SpotLight.h  Text.h  Texture.h
include/winnebago/shaders/: Basic.h  BlinnPhong.h  Phong.h  UI.h
include/winnebago/systems/: AnimationSystem.h  AudioSystem.h  InputSystem.h  MessageSystem.h  RenderSystem.h
main/: main.cpp
samples/basic-ecs-registry/: main.cpp
samples/layer/: main.cpp
samples/layer-scene-system/: main.cpp
samples/window/: main.cpp
scripts/: configure-local-debug  configure-local-release
scripts/local/: configure-local-release
src/components/: Animate.cpp  Audio.cpp  Input.cpp  Message.cpp  Render.cpp
src/core/: Application.cpp  Context.cpp  ID.cpp  Layer.cpp  Object.cpp  ObjectPool.cpp  Registry.cpp  Renderer.cpp  Scene.cpp  Window.cpp
src/ecs/: Component.cpp  Entity.cpp  Enums.cpp  System.cpp
src/graphics/: RenderImpl.cpp  RenderStrategy.cpp  RenderTarget.cpp  RendererFactory.cpp
src/network/: Client.cpp  Protocol.cpp  Server.cpp  Socket.cpp
src/parse/: ColladaParser.cpp  JSONParser.cpp  XMLParser.cpp  YAMLParser.cpp
src/scenegraph/: Camera.cpp  DirectionalLight.cpp  FlashLight.cpp  Material.cpp  Model.cpp  PointLight.cpp  Quad.cpp  SpotLight.cpp  Text.cpp  Texture.cpp
src/scenegraph/description/: Camera.cpp  DirectionalLight.cpp  FlashLight.cpp  Material.cpp  Model.cpp  PointLight.cpp  Quad.cpp  SpotLight.cpp  Text.cpp  Texture.cpp
src/shaders/: Basic.cpp  BlinnPhong.cpp  Phong.cpp  UI.cpp
src/systems/: AnimationSystem.cpp  AudioSystem.cpp  InputSystem.cpp  MessageSystem.cpp  RenderSystem.cpp
src/util/: ArgParser.cpp  Exception.cpp  Logger.cpp  Profiler.cpp
